# espflash-vs-probe-rs

./: .gitignore  Cargo.toml  README.md  TROUBLES.md  build.rs
.cargo/: config.toml
examples/: basic.rs  fmt.rs
logs/: LOG-C3-defmt.txt  LOG-C3-println.txt  LOG-C6-defmt.txt  LOG-C6-println.txt
sh/: set-c3.sh  set-c6.sh  target-dir.sh
src/: consts.rs  lib.rs  main.rs  vl53l5.rs
src/vl53l5/: mod.rs
