[package]
name = "vl53l5"
version = "0.1.0"
edition = "2021"

[dependencies]
c2rust-bitfields = { version = "0.19.0", features = ["no_std"] }

# Cargo: no optional deps for 'dev-dependencies', so placing them up here.
defmt = { version = "0.3.10", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
esp-println = { version = "0.13.0", features = ["esp32c3"], optional = true }

[dev-dependencies]
esp-hal = { version = "0.23.1", features = ["esp32c3"] }
esp-backtrace = { version = "0.15.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
] } # "println"|"defmt"
critical-section = "1.2.0"

[features]
esp-println = ["dep:esp-println", "esp-backtrace/println"]    # log to USB/UART
defmt = ["dep:defmt", "dep:defmt-rtt", "esp-backtrace/defmt", "esp-hal/defmt"]          # log to USB/JTAG

default = ["esp-println"]

esp-hal-next = []   # enable to use latest 'main' (also enable the 'patch.crates-io' section, below)
esp-hal-0_22 = []

[profile.release]
debug = 2

[patch.crates-io]
esp-backtrace   = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-hal         = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-println     = { git = "https://github.com/esp-rs/esp-hal.git" }
