[package]
name = "vl53l5"
version = "0.1.0"
edition = "2021"

[dependencies]
c2rust-bitfields = { version = "0.19.0", features = ["no_std"] }

# Cargo: no optional deps for 'dev-dependencies', so placing them up here.
defmt = { version = "0.3.10", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }

esp-println = { version = "0.13.0", features = ["esp32c3"], optional = true }   # "defmt-espflash", "log"
log = { version = "0.4.25", optional = true }

[dev-dependencies]
cfg-if = "1.0.0"
critical-section = "1.2.0"
esp-backtrace = { version = "0.15.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
] } # "println"|"defmt"
esp-hal = { version = "0.23.1", features = ["esp32c3"] }  # "defmt"

[features]
_defmt = ["dep:defmt", "esp-hal/defmt"]
_log = ["dep:log", "esp-println/log"]

espflash-println = ["dep:esp-println", "esp-backtrace/println"]
espflash-log = ["_log", "dep:esp-println", "esp-backtrace/println"]

# Enables '{info|debug|warn|...}' macros, in addition to 'println!'. Run via 'espflash'
espflash-defmt = ["_defmt", "dep:esp-println", "esp-backtrace/defmt", "esp-println/defmt-espflash"]
probe_rs-defmt = ["_defmt", "dep:defmt-rtt", "esp-backtrace/defmt"]

#default = []
default = ["espflash-println"]

esp-hal-next = []   # enable to use latest 'main' (also enable the 'patch.crates-io' section, below)

[profile.release]
debug = 2

[patch.crates-io]
esp-backtrace   = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-hal         = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-println     = { git = "https://github.com/esp-rs/esp-hal.git" }
