[package]
name = "espflash-vs"
version = "0.1.0"
edition = "2021"

[dependencies]
c2rust-bitfields = { version = "0.20.0", features = ["no_std"] }

# Cargo: no optional deps for 'dev-dependencies', so placing them up here.
defmt = { version = "0.3.10", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }

esp-println = { version = "0.13.1", features = ["esp32c3"], optional = true }   # "defmt-espflash", "log"
log = { version = "0.4.26", optional = true }

[dev-dependencies]
cfg-if = "1.0.0"
critical-section = "1.2.0"
esp-backtrace = { version = "0.15.1", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
] } # "println"|"defmt"
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c3", "unstable"] }  # "defmt"
    # '"unstable"' needed for exposing 'esp_hal::delay' (was a default feature, earlier)

[build-dependencies]
regex = { version = "1.11.1" }

[features]
_defmt = ["dep:defmt", "esp-hal/defmt"]
_log = ["dep:log", "esp-println/log"]

espflash-println = ["dep:esp-println", "esp-backtrace/println"]
espflash-log = ["_log", "dep:esp-println", "esp-backtrace/println"]

# Enables '{info|debug|warn|...}' macros, in addition to 'println!'. Run via 'espflash'
espflash-defmt = ["_defmt", "dep:esp-println", "esp-backtrace/defmt", "esp-println/defmt-espflash"]
probe_rs-defmt = ["_defmt", "dep:defmt-rtt", "esp-backtrace/defmt"]

#default = []
default = ["espflash-println"]
#default = ["espflash-println", "esp-hal-beta0"]

# Without features, compiles for 'esp-hal' 0.23.{0..1}
esp-hal-beta0 = []   # enable the 1.0.0-beta.0 API

esp-hal-next = []   # enable to use latest 'main' (also enable the 'patch.crates-io' section, below)

[profile.release]
debug = 2

#|[patch.crates-io]
#|esp-backtrace   = { git = "https://github.com/esp-rs/esp-hal.git" }
#|esp-hal         = { git = "https://github.com/esp-rs/esp-hal.git" }
#|esp-println     = { git = "https://github.com/esp-rs/esp-hal.git" }
